product_docs/docs/jdbc_connector/42.5.0.1/01_jdbc_rel_notes/jdbc_42.5.0.1_rel_notes.mdx
---
title: "Version 42.5.0.1"

---

The EDB JDBC connector provides connectivity between a Java application and an EDB Postgres Advanced Server database.

New features, enhancements, bug fixes, and other changes in the EDB JDBC Connector 42.5.0.1 include:

|      Type      |                                                                                                                                                                                                                                Description                                                                                                                                                                                                                                |
| -------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Upstream Merge | Merged with the upstream community driver version 42.5.0. See the community [JDBC documentation](https://jdbc.postgresql.org/documentation/changelog.html#version_42.5.0) for details.                                                                                                                                                                                                                                                                                    |
| Security Fix   | CVE-2022-31197 - Fixes the SQL generated in PgResultSet.refresh() to escape column identifiers in order to prevent SQL injection. Previously, the column names for both key and data columns were copied as-is into the generated SQL. This allowed for a malicious table with column names that included a statment terminator to be parsed and executed as multiple separate commands. Also, this fix adds a new test class ResultSetRefreshTest to verify this change. |
| Change         | Migrated build to Gradle.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| Enhancement    | Added new `getServerName` connection property. If the value for `changeServerName` is set to `true`, it returns a value as `PostgreSQL`. The default value is `false`.                                                                                                                                                                                                                                                                                                    |
| Enhancement    | Added new `forceBinaryTransfer` connection property. If the value is set to `true`, forces the  transfer of all binary types from the PostgreSQL server to the JDBC driver in their binary form. The default value is `false`.                                                                                                                                                                                                                                            |

 







